feat: 多模式执行分发 + 全链路追踪